--- a/index-styles.css
+++ b/index-styles.css
@@ -2,6 +2,7 @@
     --height-50: 50px;
     --height-75: 75px;
     --height-100: 100px;
+    --width-125: 125px;
     --width-150: 150px;
     --width-200: 200px;
     --doom-grn: #1cb11c90;
